# QPixSemiAnalytical

./: CMakeLists.txt  EdepInformation.txt  EdepInformation_100MeV.txt  EdepInformation_10Mev.txt  EnergyDeposition.h  EnergyDepositionTest.ipynb  PropagationTimeModel.cc  PropagationTimeModel.h  README.md  RootFileManager.cc  RootFileManager.h  SemiAnalyticalModel.cc  SemiAnalyticalModel.h  SimPhotons.h  TrackAnalysis.ipynb  main.cc  params.json  positions_125_90.txt  positions_24_40.txt  positions_40_120.txt  setup.sh
.ipynb_checkpoints/: QPixLightAnalysis-checkpoint.ipynb
Analysis/: LightAnalysis.ipynb
Analysis/.ipynb_checkpoints/: LightAnalysis-checkpoint.ipynb  QPixLightAnalysis-checkpoint.ipynb
